# forward_looking_sonar_gazebo

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  deps.repos  manifest.xml  package.xml
.github/workflows/: action-ros-ci.yaml
include/forward_looking_gazebo_sonar/: FLSonarRos.hh
include/forward_looking_sonar_gazebo/: FLSonar.hh  FLSonarRos.hh
include/foward_looking_gazebo_sonar/: FLSonar.hh  FLSonarRos.hh  SDFTool.hh
include/gazebo_ros_sonar_plugin/: FLSonar.hh  FLSonarRos.hh  ImageViewerCaptureTool.hpp  NormalDepthMap.hpp  Sonar.hh  SonarPrivate.hh  Tools.hpp
launch/: car_sonar.launch  test_magnet_launcher.launch  upload.launch
media/materials/programs/: my_laser_1st_pass.frag  my_laser_1st_pass.vert  normal_depth_map.frag
media/materials/scripts/: gazebo_ros_sonar.material
resources/shaders/: normalDepthMap.frag  normalDepthMap.vert
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  FLSonar.cc  FLSonarRos.cc  ImageViewerCaptureTool.cpp  Main.cpp  ModelPlugin.cc  NormalDepthMap.cpp  SensorPlugin.cc  Sonar.cc  Tools.cpp
test/: Attenuation_test.cpp  CMakeLists.txt  FLSonar_TEST.cc  ImageViewerCaptureTool_test.cpp  IncludePaths.h.in  MaterialProperties_test.cpp  NormalDepthMap_test.cpp  NormalMapping_test.cpp  ServerFixture.cc  Sonar_TEST.cc  TestHelper.cpp  TestHelper.hpp  pure_gazebo_test.test  sonar_test.test  test_Dummy.cpp
xacro/: actuators_car_sonar.xacro  base_car_sonar.xacro  base_magnet_test.xacro  default_car_sonar.xacro  default_magnet_test.xacro  gazebo_car_sonar.xacro  gazebo_magnet_test.xacro  sensors_car_sonar.xacro  snippets_car_sonar.xacro
